--- a/test.html
+++ b/test.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container{
+            max-width: 300px;
+            min-height: 300px;
+            border-radius: 15px;
+            padding: 10px;
+            box-shadow: 2px 2px 2px 2px #ede5e5;
+            margin: 20px auto;
+        }
+    </style>
 </head>
-<body>
-<h2>hello world</h2>
-<h2></h2>
+<body style="background-color: rgb(191, 183, 183);">
+<h1 align="center">WELCOME TO MY SITE</h1>
+<div class="container" style="background-color: aquamarine;">
+<ol><h3>
+
+    <li><a href="homework1.html">Paragragh</a></li>
+    <li><a href="homework2.html">Student details table</a></li>
+    <li><a href="h2.html">Oder and unoder list</a></li>
+    <li><a href="h4.html">Product description</a></li>
+    <li><a href="h5.html">Twitter</a></li>
+    <li><a href="h6.html">Morzilla</a></li>
+    <li><a href="h7.html">GMIT</a></li>
+    <li><a href="h8.html">Time tale</a></li>
+    <li><a href="cv.html">CV</a></li>
+    
+</h3>
+</ol>
+</div>
 </body>
 </html>
